--- a/notebooks/Untitled.ipynb
+++ b/notebooks/Untitled.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-12-04T03:23:58.454086Z",
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-12-04T03:23:59.538613Z",
@@ -78,7 +78,7 @@
        "L(t, r)**2*TensorProduct(M(t, r)*dt + dr, M(t, r)*dt + dr) - N(t, r)**2*TensorProduct(dt, dt) + S(t, r)**2*(sin(\\theta)**2*TensorProduct(d\\varphi, d\\varphi) + TensorProduct(d\\theta, d\\theta))"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-12-04T03:24:00.945117Z",
@@ -110,7 +110,7 @@
        "[                                 0,                  0,          0, S(t, r)**2*sin(\\theta)**2]])"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-12-04T03:24:03.310688Z",
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-12-04T03:24:11.199858Z",
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-12-04T03:29:43.194477Z",
@@ -178,13 +178,38 @@
        "[ 0,          0,          0, S(t, r)**2*sin(\\theta)**2]])"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "simp_gii.matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle - c^{2} \\operatorname{d}t \\otimes \\operatorname{d}t + r^{2} \\left(\\sin^{2}{\\left(\\theta \\right)} \\operatorname{d}\\varphi \\otimes \\operatorname{d}\\varphi + \\operatorname{d}\\theta \\otimes \\operatorname{d}\\theta\\right) + \\operatorname{d}r \\otimes \\operatorname{d}r$"
+      ],
+      "text/plain": [
+       "-c**2*TensorProduct(dt, dt) + r**2*(sin(\\theta)**2*TensorProduct(d\\varphi, d\\varphi) + TensorProduct(d\\theta, d\\theta)) + TensorProduct(dr, dr)"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "flat = metric.flrw(curvature_constant=0)\n",
+    "a = flat.components[0]\n",
+    "flat.twoform.subs({a: 1})"
    ]
   },
   {
@@ -203,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-12-04T03:24:14.819720Z",
@@ -217,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-12-04T03:28:05.165645Z",
@@ -231,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-12-04T03:29:53.391811Z",
@@ -252,7 +277,7 @@
        "[ 0,          0,    0, r**2*sin(\\theta)**2]])"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -270,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 22,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-12-04T03:30:35.131053Z",
@@ -279,13 +304,13 @@
    },
    "outputs": [],
    "source": [
-    "g = simp_gii\n",
-    "# g = simp_2_gii"
+    "# g = simp_gii\n",
+    "g = simp_2_gii"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 23,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-12-04T03:30:38.265244Z",
@@ -296,13 +321,13 @@
     {
      "data": {
       "text/latex": [
-       "$\\displaystyle \\frac{L^{3}{\\left(t,r \\right)} \\left(\\frac{\\partial}{\\partial t} S{\\left(t,r \\right)}\\right)^{2} + L^{3}{\\left(t,r \\right)} + 2 L^{2}{\\left(t,r \\right)} S{\\left(t,r \\right)} \\frac{\\partial}{\\partial t} L{\\left(t,r \\right)} \\frac{\\partial}{\\partial t} S{\\left(t,r \\right)} - 2 L{\\left(t,r \\right)} S{\\left(t,r \\right)} \\frac{\\partial^{2}}{\\partial r^{2}} S{\\left(t,r \\right)} - L{\\left(t,r \\right)} \\left(\\frac{\\partial}{\\partial r} S{\\left(t,r \\right)}\\right)^{2} + 2 S{\\left(t,r \\right)} \\frac{\\partial}{\\partial r} L{\\left(t,r \\right)} \\frac{\\partial}{\\partial r} S{\\left(t,r \\right)}}{L^{3}{\\left(t,r \\right)} S^{2}{\\left(t,r \\right)}} = 0$"
+       "$\\displaystyle \\frac{2 r \\frac{\\partial}{\\partial r} L{\\left(t,r \\right)} + L^{3}{\\left(t,r \\right)} - L{\\left(t,r \\right)}}{r^{2} L^{3}{\\left(t,r \\right)}} = 0$"
       ],
       "text/plain": [
-       "Eq((L(t, r)**3*Derivative(S(t, r), t)**2 + L(t, r)**3 + 2*L(t, r)**2*S(t, r)*Derivative(L(t, r), t)*Derivative(S(t, r), t) - 2*L(t, r)*S(t, r)*Derivative(S(t, r), (r, 2)) - L(t, r)*Derivative(S(t, r), r)**2 + 2*S(t, r)*Derivative(L(t, r), r)*Derivative(S(t, r), r))/(L(t, r)**3*S(t, r)**2), 0)"
+       "Eq((2*r*Derivative(L(t, r), r) + L(t, r)**3 - L(t, r))/(r**2*L(t, r)**3), 0)"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -314,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 24,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-12-04T03:31:06.475260Z",
@@ -325,13 +350,13 @@
     {
      "data": {
       "text/latex": [
-       "$\\displaystyle \\frac{2 \\left(- L{\\left(t,r \\right)} \\frac{\\partial^{2}}{\\partial t\\partial r} S{\\left(t,r \\right)} + \\frac{\\partial}{\\partial t} L{\\left(t,r \\right)} \\frac{\\partial}{\\partial r} S{\\left(t,r \\right)}\\right)}{L{\\left(t,r \\right)} S{\\left(t,r \\right)}} = 0$"
+       "$\\displaystyle \\frac{2 \\frac{\\partial}{\\partial t} L{\\left(t,r \\right)}}{r L{\\left(t,r \\right)}} = 0$"
       ],
       "text/plain": [
-       "Eq(2*(-L(t, r)*Derivative(S(t, r), r, t) + Derivative(L(t, r), t)*Derivative(S(t, r), r))/(L(t, r)*S(t, r)), 0)"
+       "Eq(2*Derivative(L(t, r), t)/(r*L(t, r)), 0)"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -343,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 25,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-12-04T03:31:11.036491Z",
@@ -354,13 +379,13 @@
     {
      "data": {
       "text/latex": [
-       "$\\displaystyle \\frac{- 2 L^{2}{\\left(t,r \\right)} S{\\left(t,r \\right)} \\frac{\\partial^{2}}{\\partial t^{2}} S{\\left(t,r \\right)} - L^{2}{\\left(t,r \\right)} \\left(\\frac{\\partial}{\\partial t} S{\\left(t,r \\right)}\\right)^{2} - L^{2}{\\left(t,r \\right)} + \\left(\\frac{\\partial}{\\partial r} S{\\left(t,r \\right)}\\right)^{2}}{S^{2}{\\left(t,r \\right)}} = 0$"
+       "$\\displaystyle \\frac{1 - L^{2}{\\left(t,r \\right)}}{r^{2}} = 0$"
       ],
       "text/plain": [
-       "Eq((-2*L(t, r)**2*S(t, r)*Derivative(S(t, r), (t, 2)) - L(t, r)**2*Derivative(S(t, r), t)**2 - L(t, r)**2 + Derivative(S(t, r), r)**2)/S(t, r)**2, 0)"
+       "Eq((1 - L(t, r)**2)/r**2, 0)"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -372,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 26,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-12-04T03:31:15.175319Z",
@@ -383,13 +408,13 @@
     {
      "data": {
       "text/latex": [
-       "$\\displaystyle \\frac{\\left(- L^{3}{\\left(t,r \\right)} \\frac{\\partial^{2}}{\\partial t^{2}} S{\\left(t,r \\right)} - L^{2}{\\left(t,r \\right)} S{\\left(t,r \\right)} \\frac{\\partial^{2}}{\\partial t^{2}} L{\\left(t,r \\right)} - L^{2}{\\left(t,r \\right)} \\frac{\\partial}{\\partial t} L{\\left(t,r \\right)} \\frac{\\partial}{\\partial t} S{\\left(t,r \\right)} + L{\\left(t,r \\right)} \\frac{\\partial^{2}}{\\partial r^{2}} S{\\left(t,r \\right)} - \\frac{\\partial}{\\partial r} L{\\left(t,r \\right)} \\frac{\\partial}{\\partial r} S{\\left(t,r \\right)}\\right) S{\\left(t,r \\right)}}{L^{3}{\\left(t,r \\right)}} = 0$"
+       "$\\displaystyle \\frac{r \\left(r L^{2}{\\left(t,r \\right)} \\frac{\\partial^{2}}{\\partial t^{2}} L{\\left(t,r \\right)} + \\frac{\\partial}{\\partial r} L{\\left(t,r \\right)}\\right)}{L^{3}{\\left(t,r \\right)}} = 0$"
       ],
       "text/plain": [
-       "Eq((-L(t, r)**3*Derivative(S(t, r), (t, 2)) - L(t, r)**2*S(t, r)*Derivative(L(t, r), (t, 2)) - L(t, r)**2*Derivative(L(t, r), t)*Derivative(S(t, r), t) + L(t, r)*Derivative(S(t, r), (r, 2)) - Derivative(L(t, r), r)*Derivative(S(t, r), r))*S(t, r)/L(t, r)**3, 0)"
+       "Eq(r*(r*L(t, r)**2*Derivative(L(t, r), (t, 2)) + Derivative(L(t, r), r))/L(t, r)**3, 0)"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -403,36 +428,218 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Rearranging Terms"
+    "## EFE_{00}"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$\\text{EFE}_{00}:\\quad 2\\partial_t^2 L - L = 0$"
+    "$$\\frac{L^{3}{\\left(t,r \\right)} \\left(\\frac{\\partial}{\\partial t} S{\\left(t,r \\right)}\\right)^{2} + L^{3}{\\left(t,r \\right)} + 2 L^{2}{\\left(t,r \\right)} S{\\left(t,r \\right)} \\frac{\\partial}{\\partial t} L{\\left(t,r \\right)} \\frac{\\partial}{\\partial t} S{\\left(t,r \\right)} - 2 L{\\left(t,r \\right)} S{\\left(t,r \\right)} \\frac{\\partial^{2}}{\\partial r^{2}} S{\\left(t,r \\right)} - L{\\left(t,r \\right)} \\left(\\frac{\\partial}{\\partial r} S{\\left(t,r \\right)}\\right)^{2} + 2 S{\\left(t,r \\right)} \\frac{\\partial}{\\partial r} L{\\left(t,r \\right)} \\frac{\\partial}{\\partial r} S{\\left(t,r \\right)}}{L^{3}{\\left(t,r \\right)} S^{2}{\\left(t,r \\right)}} = 0$$"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$\\text{EFE}_{01}:\\quad \\frac{2\\partial_t L}{r L} = 0$"
+    "$$\\frac{L^{3} \\left(S_t\\right)^{2} + L^{3} + 2 L^{2} S L_t S_t - 2 L S S_{rr} - L \\left(S_r\\right)^{2} + 2 S  L_r  S_r}{L^{3} S^{2}} = 0$$"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$\\text{EFE}_{11}:\\quad -\\frac{1}{2} L^3 + L^2 \\partial_t^2 L + \\frac{2}{r} \\partial_r L$"
+    "$$\\left(\\frac{S_t}{S}\\right)^{2} + \\frac{1}{S^2} + 2 \\left(\\frac{L_t}{L}\\right) \\left(\\frac{S_t}{S}\\right) - 2 \\frac{1}{L^2} \\left(\\frac{S_{rr}}{S}\\right) - \\frac{1}{L^2} \\left(\\frac{S_r}{S}\\right)^{2} + 2 \\frac{1}{L^2} \\left(\\frac{L_r}{L}\\right) \\left(\\frac{S_r}{S}\\right) = 0$$"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Using $\\tilde{S}_r \\equiv \\frac{S_r}{S}$, $\\tilde{S}_t \\equiv \\frac{S_t}{S}$, $\\tilde{L}_r \\equiv \\frac{L_r}{L}$, $\\tilde{L}_t \\equiv \\frac{L_t}{L}$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\\left(\\Gamma^S_t\\right)^{2} + \\frac{1}{S^2} + 2 \\Gamma^L_t \\Gamma^S_t - 2 \\frac{1}{L^2} \\left(\\frac{S_{rr}}{S}\\right) - \\frac{1}{L^2} \\left(\\frac{S_r}{S}\\right)^{2} + 2 \\frac{1}{L^2} \\Gamma^L_r \\Gamma^S_r = 0$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\\left(\\tilde{S}_r\\right)_r = \\frac{\\partial}{\\partial r} \\tilde{S}_r = \\frac{\\partial}{\\partial r} \\frac{S_r}{S} = \\frac{S_{rr}S - S_{r}^2}{S^2} = \\frac{S_{rr}}{S} - {\\tilde{S}_r}^2$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$${\\tilde{S}_t}^{2} + \\frac{1}{S^2} + 2 \\tilde{L}_t \\tilde{S}_t + \\frac{1}{L^2} \\left[{\\tilde{S}_r}^{2} + 2 \\tilde{L}_r \\tilde{S}_r - 2 \\left(\\tilde{S}_r\\right)_r\\right] = 0$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## EFE_{01}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\\frac{2 \\left(- L{\\left(t,r \\right)} \\frac{\\partial^{2}}{\\partial t\\partial r} S{\\left(t,r \\right)} + \\frac{\\partial}{\\partial t} L{\\left(t,r \\right)} \\frac{\\partial}{\\partial r} S{\\left(t,r \\right)}\\right)}{L{\\left(t,r \\right)} S{\\left(t,r \\right)}} = 0$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\\frac{2 \\left(- L S_{tr} + L_t S_r\\right)}{L S} = 0$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\\frac{\\partial}{\\partial t} \\tilde{S}_r = \\frac{\\partial}{\\partial t} \\frac{S_r}{S} = \\frac{S_{tr}S - S_r S_{t}}{S^2} = \\frac{S_{tr}}{S} - \\tilde{S}_r \\tilde{S}_t$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\\implies \\frac{S_{tr}}{S} = \\left(\\tilde{S}_r\\right)_t + \\tilde{S}_r \\tilde{S}_t$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$- \\left(\\frac{S_{tr}}{S}\\right) + \\left(\\frac{L_t}{L}\\right) \\left(\\frac{S_r}{S}\\right) = 0$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$- \\left(\\frac{S_{tr}}{S}\\right) + \\tilde{L}_t \\tilde{S}_r = 0$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\\left(\\tilde{S}_r\\right)_t + \\tilde{S}_r \\left( \\tilde{S}_t - \\tilde{L}_t\\right) = 0$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## EFE_{11}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\\frac{- 2 L^{2}{\\left(t,r \\right)} S{\\left(t,r \\right)} \\frac{\\partial^{2}}{\\partial t^{2}} S{\\left(t,r \\right)} - L^{2}{\\left(t,r \\right)} \\left(\\frac{\\partial}{\\partial t} S{\\left(t,r \\right)}\\right)^{2} - L^{2}{\\left(t,r \\right)} + \\left(\\frac{\\partial}{\\partial r} S{\\left(t,r \\right)}\\right)^{2}}{S^{2}{\\left(t,r \\right)}} = 0$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\\frac{- 2 L^{2} S S_{tt} - L^{2} \\left(S_t\\right)^{2} - L^{2} + \\left(S_r\\right)^{2}}{S^{2}} = 0$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$- 2 L^{2} \\left(\\frac{S_{tt}}{S}\\right) - L^{2} \\left(\\frac{S_t}{S}\\right)^{2} - \\frac{L^{2}}{S^2} + \\left(\\frac{S_r}{S}\\right)^{2} = 0$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\\left(\\tilde{S}_t\\right)_t = \\frac{\\partial}{\\partial t} \\tilde{S}_t = \\frac{\\partial}{\\partial t} \\frac{S_t}{S} = \\frac{S_{tt}S - S_{t}^2}{S^2} = \\frac{S_{tt}}{S} - \\tilde{S}_t^2 \\implies \\frac{S_{tt}}{S} = \\left(\\tilde{S}_t\\right)_t + \\tilde{S}_t^2$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$- 2 L^{2} \\left(\\frac{S_{tt}}{S}\\right) - L^{2} \\tilde{S}_t^2 - \\frac{L^{2}}{S^2} + \\tilde{S}_r^2 = 0$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$2 \\left(\\tilde{S}_t\\right)_t + 3{\\tilde{S}_t}^2 + \\frac{1}{S^2} - \\frac{{\\tilde{S}_r}^2}{L^2} = 0$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## EFE_{22}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\\frac{\\left(- L^{3}{\\left(t,r \\right)} \\frac{\\partial^{2}}{\\partial t^{2}} S{\\left(t,r \\right)} - L^{2}{\\left(t,r \\right)} S{\\left(t,r \\right)} \\frac{\\partial^{2}}{\\partial t^{2}} L{\\left(t,r \\right)} - L^{2}{\\left(t,r \\right)} \\frac{\\partial}{\\partial t} L{\\left(t,r \\right)} \\frac{\\partial}{\\partial t} S{\\left(t,r \\right)} + L{\\left(t,r \\right)} \\frac{\\partial^{2}}{\\partial r^{2}} S{\\left(t,r \\right)} - \\frac{\\partial}{\\partial r} L{\\left(t,r \\right)} \\frac{\\partial}{\\partial r} S{\\left(t,r \\right)}\\right) S{\\left(t,r \\right)}}{L^{3}{\\left(t,r \\right)}} = 0$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\\frac{\\left(- L^{3} S_{tt} - L^{2} S L_{tt} - L^{2} L_t S_t + L S_{rr} - L_{r} S_{r}\\right) S}{L^{3}} = 0$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$- \\left(\\frac{S_{tt}}{S}\\right) - \\left(\\frac{L_{tt}}{L}\\right) - \\left(\\frac{L_t}{L}\\right) \\left(\\frac{S_t}{S}\\right) + \\frac{1}{L^2} \\left(\\frac{S_{rr}}{S}\\right) - \\frac{1}{L^2} \\left(\\frac{L_{r}}{L}\\right) \\left(\\frac{S_{r}}{S}\\right) = 0$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$- \\left(\\left(\\tilde{S}_t\\right)_t + \\tilde{S}_t^2\\right) - \\left(\\left(\\tilde{L}_t\\right)_t + \\tilde{L}_t^2\\right) - \\tilde{L}_t \\tilde{S}_t + \\frac{1}{L^2} \\left(\\left(\\tilde{S}_r\\right)_r + {\\tilde{S}_r}^2\\right) - \\frac{1}{L^2} \\tilde{L}_r \\tilde{S}_r = 0$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$ \\left(\\left(\\tilde{S}_t\\right)_t + \\tilde{S}_t^2\\right) + \\left(\\left(\\tilde{L}_t\\right)_t + \\tilde{L}_t^2\\right) + \\tilde{L}_t \\tilde{S}_t - \\frac{1}{L^2} \\left[\\left(\\tilde{S}_r\\right)_r + \\tilde{S}_r\\left(\\tilde{S}_r - \\tilde{L}_r\\right)\\right] = 0$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$ \\left(\\tilde{S}_t + \\tilde{L}_t\\right)_t + \\left(\\tilde{S}_t + \\tilde{L}_t\\right)^2 - \\tilde{L}_t \\tilde{S}_t - \\frac{1}{L^2} \\left[\\left(\\tilde{S}_r\\right)_r + \\tilde{S}_r\\left(\\tilde{S}_r - \\tilde{L}_r\\right)\\right] = 0$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\\left(\\tilde{S}_r\\right)_r = \\frac{\\partial}{\\partial r} \\tilde{S}_r = \\frac{\\partial}{\\partial r} \\frac{S_r}{S} = \\frac{S_{rr}S - S_{r}^2}{S^2} = \\frac{S_{rr}}{S} - {\\tilde{S}_r}^2 \\implies \\frac{S_{rr}}{S} = \\left(\\tilde{S}_r\\right)_r + {\\tilde{S}_r}^2$$"
+   ]
   },
   {
    "cell_type": "markdown",
