--- a/notebooks/Untitled.ipynb
+++ b/notebooks/Untitled.ipynb
@@ -12,7 +12,7 @@
    "outputs": [],
    "source": [
     "import sys\n",
-    "sys.path.append('/Users/jim/repos/research/collapse')"
+    "sys.path.append('/Users/jim/repos/research/pynstein')"
    ]
   },
   {
@@ -42,7 +42,7 @@
    "source": [
     "import itertools\n",
     "from sympy import Symbol, simplify, Function\n",
-    "from collapse.symbolic import metric, constants, gravity, utilities, curvature, coords"
+    "from pynstein.symbolic import metric, constants, gravity, utilities, curvature, coords"
    ]
   },
   {
